# mnemon-cpp

./: .gitignore  .upstream-sync  .upstream-tag-pending  CLAUDE.md  CMakeLists.txt  Makefile  README.md  mnemon-spec.md
.claude/commands/: upstream-sync.md
.claude/skills/upstream-sync/: SKILL.md
.github/: dependabot.yml
.github/workflows/: bump-fetchcontent.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-05-10-upstream-sync-skill-pressure-tests.md  2026-05-10-upstream-sync-skill.md
docs/superpowers/specs/: 2026-05-10-upstream-sync-skill-design.md
scripts/: bump_fetchcontent_tags.py  e2e_test.sh  sync_setup_assets_from_monorepo.sh  upstream_release_tags.sh  upstream_sync.sh
setup_assets/: assets.go
setup_assets/claude/: compact.sh  guide.md
setup_assets/codebuddy/: SKILL.md  stop.sh
setup_assets/kimi/: SKILL.md  stop.sh  user_prompt.sh
setup_assets/nanoclaw/: SKILL.md  container-skill.md
setup_assets/opencode/: SKILL.md  mnemon.js
setup_assets/pi/: mnemon.ts
setup_assets/qoder/: prime.sh  stop.sh
setup_assets/qoderwork/: SKILL.md
setup_assets/trae/: SKILL.md  stop.sh
setup_assets/workbuddy/: SKILL.md  stop.sh
src/: commands.cpp  commands.hpp  db.cpp  db.hpp  diff.cpp  diff.hpp  graph_bfs.cpp  graph_bfs.hpp  graph_causal.cpp  graph_causal.hpp  graph_engine.cpp  graph_engine.hpp  graph_entity.cpp  graph_entity.hpp  graph_extract.cpp  graph_extract.hpp  graph_semantic.cpp  graph_semantic.hpp  graph_temporal.cpp  graph_temporal.hpp  intent.cpp  intent.hpp  keyword.cpp  keyword.hpp  main.cpp  model.cpp  model.hpp  model_json.cpp  model_json.hpp  ollama.cpp  ollama.hpp  paths.cpp  paths.hpp  recall.cpp  recall.hpp  setup.cpp  setup.hpp  time_util.cpp  time_util.hpp  tokenize.cpp  (+9 more)
tests/: smoke_test.cpp  upstream_release_tags_test.sh  upstream_sync_helper_test.sh  yaml_lite_test.cpp
tests/fixtures/upstream-sync/: build_fixture.sh
tools/: gen_embedded_assets.py
